# RabiesMolScreen

./: .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.matrix  Dockerfile.runtime  LICENSE  Makefile  PR_DRAFT.md  README.md  dashboard_template.html  dev-requirements.txt  environment.yml  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-runtime.txt  requirements.txt  ruff.toml
config/: default.yaml  defaults.yaml  results.schema.json
data/results/: example_results.json  sample.parquet
docs/: ARCHITECTURE.md  Config.md  Runbook.md  Telemetry.md  biography.md  changelog.md  cli.md  concept.md  development.md  faq.md  getting-started.md  index.md  project_board.md  quickstart.md  troubleshooting.md  workflow.md
docs/wiki_templates/: Configuration.md  Home.md  Runbook.md  Telemetry.md
examples/: ligands_20.smi  ligands_mini.smi  sample_ligands.smi  small_ligands.smi
examples/ligands/: README.txt
rabiesmol/: __init__.py  __main__.py  api.py  backend.py  cli.py  config.py  config_schema.py  docking.py  docking_ext.py  doctor.py  experiment.py  fetch_structures.py  io.py  logging_config.py  parallel.py  pockets.py  prepare.py  proc.py  report_demo.py  report_interactive.py  reporting.py  reporting_ext.py  rescoring.py  results.py  results_schema.py  telemetry.py  validation.py  variance_report.py
reports/: top_hits.ipynb
scripts/: bootstrap.sh  fetch_structures.py  mini_run.sh  prepare_inputs.py  prepare_ligands.py  run_docking.py  run_pipeline.sh  variance_report.py
tests/: conftest.py  test_cli.py  test_cli_help.py  test_cli_seed.py  test_cli_smoke.py  test_contract.py  test_docking.py  test_log_parser.py  test_pipeline.py  test_pockets.py  test_prepare.py  test_rescore_validate.py  test_results_schema.py  test_schema.py  test_seed_determinism.py  test_vina.py
wiki_templates/: CLI.md  Development.md  Getting-Started.md  Home.md
(+18 files in other folders)
