[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rabiesmol"
version = "0.1.0"
description = "Demo toolkit for ligand preparation, docking and reporting."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "rabiesmol authors"}]
dependencies = [
  "typer>=0.9",
  "pandas>=2.0",
  "jinja2>=3.1",
  "loguru>=0.7",
  "pyarrow>=15.0"
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[project.scripts]
rabiesmol = "rabiesmol.cli:app"
