[build-system]
requires = ["setuptools~=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rabiesmol"
version = "0.1.1"
description = "Demo toolkit for ligand preparation, docking, rescoring and reporting."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "RabiesMol authors"}]
dependencies = [
  # Фиксируем версии основных зависимостей для предотвращения дрейфа.
  "typer~=0.9",
  "pandas~=2.2",
  "numpy~=1.26",
  "jinja2~=3.1",
  "nbconvert~=7.0",
  "pyyaml~=6.0",
  "loguru~=0.7",
  "pyarrow~=15.0"
]

[project.optional-dependencies]
viz = ["plotly~=5.0"]
validation = ["rdkit-pypi"]
dev = ["pytest~=7.4", "pytest-cov~=4.1", "ruff~=0.4", "hypothesis~=6.100"]

[project.scripts]
rabiesmol = "rabiesmol.cli:app"
