[project]
name = "rabiesmol-screen"
version = "0.2.0"
description = "In silico screening mini-pipeline with clean architecture and plugin boundaries"
authors = [{name = "RabiesMol Maintainers"}]
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "jinja2>=3.1",
]

[project.scripts]
rabiesmol = "rabiesmol.cli.main:app"

[tool.setuptools.packages.find]
include = ["rabiesmol*"]
